添加全局权限校验函数; 添加用户页展示列表

--- a/pages/my/my.less
+++ b/pages/my/my.less
@@ -71,3 +71,13 @@
     }
   }
 }
+
+.list-title {
+  font-size: 32rpx;
+  font-weight: bold;
+  color: @background-color;
+  border-left: solid 15rpx @background-color;
+  padding-left: 20rpx;
+  margin: 35rpx 0;
+
+}
