--- a/pages/my_checkin/my_checkin.less
+++ b/pages/my_checkin/my_checkin.less
@@ -1,1 +1,76 @@
 @import url('../../style.less');
+
+.green {
+  background-color: #35c895 !important;
+}
+
+.yellow {
+  background-color: #eab83e !important;
+}
+
+.red {
+  background-color: #ea643e !important;
+}
+
+.stats {
+  margin-bottom: 50rpx;
+
+  .icon-big {
+    width: 250rpx;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40rpx;
+  }
+
+  .report-title {
+    display: flex;
+    justify-content: center;
+    margin-top: 20rpx;
+
+    .days {
+      font-size: 60rpx;
+      color: @font-color;
+    }
+
+    .unit {
+      margin-left: 10rpx;
+      margin-top: 33rpx;
+      color: @font-color;
+    }
+  }
+
+  .sub-title {
+    font-size: 34rpx;
+    color: @font-color;
+    margin-top: 10rpx;
+    text-align: center;
+  }
+
+  .report {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30rpx;
+
+    .column {
+      flex-grow: 1;
+      flex-shrink: 1;
+      color: #fff;
+      padding-top: 20rpx;
+      padding-bottom: 15rpx;
+
+      .column-title {
+        display: block;
+        text-align: center;
+        font-size: 30rpx;
+        margin-bottom: 5rpx;
+      }
+
+      .number {
+        display: block;
+        text-align: center;
+        font-size: 30rpx;
+      }
+    }
+  }
+}
